--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,7 +3,7 @@
          name="PHP_CodeSniffer"
          xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd"
 >
-    <description>The coding standard for PHP Library Starter.</description>
+    <description>The coding standard for PHP Rade DI.</description>
 
     <arg name="basepath" value="."/>
     <arg name="extensions" value="php"/>
