--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 script:
     - ./vendor/bin/phpcs
     - ./vendor/bin/phpstan analyse
-    - ./vendor/bin/phpunit --testsuite=unit --coverage-clover=build/logs/clover.xml
+    - ./vendor/bin/phpunit --testsuite=unit --coverage-text --coverage-clover=build/logs/clover.xml
 
 after_success:
     - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
