--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "divineniiquaye/php-invoker": "^0.9",
         "nette/utils": "^3.2",
         "psr/container": "^1.0",
-        "symfony/config": "^5.2"
+        "symfony/config": "^5.2",
+        "symfony/service-contracts": "^1.1.6|^2"
     },
     "require-dev": {
         "composer/package-versions-deprecated": "^1.11",
