--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -19,4 +19,29 @@
             <directory name="vendor"/>
         </ignoreFiles>
     </projectFiles>
+
+    <stubs>
+        <file name="vendor/vimeo/psalm/stubs/Php80.php"/>
+    </stubs>
+
+    <issueHandlers>
+        <PossiblyInvalidArgument>
+            <errorLevel type="suppress">
+                <referencedFunction name="SplObjectStorage::offsetGet"/>
+            </errorLevel>
+        </PossiblyInvalidArgument>
+
+        <ArgumentTypeCoercion>
+            <errorLevel type="suppress">
+                <file name="src/Container.php"/>
+            </errorLevel>
+        </ArgumentTypeCoercion>
+
+        <InvalidThrow>
+            <errorLevel type="suppress">
+                <referencedClass name="Psr\Container\NotFoundExceptionInterface"/>
+                <referencedClass name="Psr\Container\ContainerExceptionInterface"/>
+            </errorLevel>
+        </InvalidThrow>
+    </issueHandlers>
 </psalm>
