Fixed PSR12 and PSR1 coding standard issues

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -19,5 +19,7 @@
     <file>tests/</file>
 
     <!-- Include full PSR-12 Coding Standard -->
-    <rule ref="PSR12"/>
+    <rule ref="PSR12">
+        <exclude name="PSR1.Classes.ClassDeclaration.MultipleClasses"/>
+    </rule>
 </ruleset>
