Update psalm.xml.dist file

--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -33,7 +33,7 @@
 
         <ArgumentTypeCoercion>
             <errorLevel type="suppress">
-                <file name="src/AutowireTrait.php"/>
+                <file name="src/Traits/AutowireTrait.php"/>
             </errorLevel>
         </ArgumentTypeCoercion>
 
