--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpunit/phpunit": "^8.5 || ^9.5",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^3.11 || ^4.0"
+        "vimeo/psalm": "^3.11 || 4.4.*"
     },
     "autoload": {
         "psr-4": {
