--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -6,6 +6,7 @@ parameters:
     paths: [src]
     checkGenericClassInNonGenericObjectType: false
     checkMissingIterableValueType: false
+    treatPhpDocTypesAsCertain: false
 
     ignoreErrors:
         - "#^Construct empty\\(\\) is not allowed. Use more strict comparison.$#"
@@ -16,7 +17,7 @@ parameters:
             message: '#^Foreach overwrites \$type with its value variable|Only booleans are allowed in a negated boolean, bool\|null given.$#'
             path: src/Resolvers/AutowireValueResolver.php
         -
-            message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.$#"
+            message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.|Variable method call on \\$this\\(Rade\\\\DI\\\\Container\\).$#"
             path: src/Container.php
         -
             message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)$#"
