--- a/.gitattributes
+++ b/.gitattributes
@@ -6,8 +6,10 @@
 /.gitattributes       export-ignore
 /.github              export-ignore
 /.gitignore           export-ignore
-# /phpcs.xml.dist       export-ignore
-# /phpstan.neon.dist    export-ignore
-# /phpunit.xml.dist     export-ignore
-# /psalm.xml            export-ignore
-# /tests                export-ignore
+/.travis.yml          export-ignore
+/.php_cs.dist         export-ignore
+/phpcs.xml.dist       export-ignore
+/phpstan.neon.dist    export-ignore
+/phpunit.xml.dist     export-ignore
+/psalm.xml            export-ignore
+/tests                export-ignore
