--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -17,13 +17,13 @@ parameters:
             message: '#^Foreach overwrites \$type with its value variable|Only booleans are allowed in a negated boolean, bool\|null given.$#'
             path: src/Resolvers/AutowireValueResolver.php
         -
-            message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.|Variable method call on \\$this\\(Rade\\\\DI\\\\Container\\).$#"
+            message: "#^Parameter \\#1 \\$callback of function array_map expects \\(callable\\(\\): mixed\\)\\|null, array\\(Psr\\\\Container\\\\ContainerInterface, 'get'\\|'offsetGet'\\) given.|Variable method call on Psr\\\\Container\\\\ContainerInterface.$#"
+            path: src/Resolvers/AutowireValueResolver.php
+        -
+            message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.|Variable method|property call|access on \\$this\\(Rade\\\\DI\\\\Container\\).$#"
             path: src/Container.php
         -
             message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)$#"
-            path: src/Container.php
-        -
-            message: "#^Cannot assign offset \\(callable\\(\\): mixed\\)\\|object to SplObjectStorage|Parameter \\#1 \\$function of method Rade\\\\DI\\\\Container\\:\\:callMethod\\(\\) expects callable\\(\\): mixed, \\(callable\\(\\): mixed\\)\\|object given.$#"
             path: src/Container.php
         -
             message: '#^Invalid type Psr\\Container\\(NotFound|Container)ExceptionInterface to throw|Only booleans are allowed in a ternary operator condition, ReflectionType\|null given.$#'
