--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -20,7 +20,7 @@ parameters:
             message: "#^Parameter \\#1 \\$callback of function array_map expects \\(callable\\(\\): mixed\\)\\|null, array\\(Psr\\\\Container\\\\ContainerInterface, 'get'\\|'offsetGet'\\) given.|Variable method call on Psr\\\\Container\\\\ContainerInterface.$#"
             path: src/Resolvers/AutowireValueResolver.php
         -
-            message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.|Variable method|property call|access on \\$this\\(Rade\\\\DI\\\\Container\\).$#"
+            message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.|Variable method|property call|access on \\$this\\(Rade\\\\DI\\\\Container\\).|Method Rade\\\\DI\\\\Container\\:\\:keys\\(\\) should return array<string> but returns array<int, int\\|string>.$#"
             path: src/Container.php
         -
             message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)$#"
