--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -23,7 +23,7 @@ parameters:
             message: "#^Method Rade\\\\DI\\\\Container\\:\\:(factory|protect)\\(\\) should return callable\\(\\): mixed but returns object.|Variable method|property call|access on \\$this\\(Rade\\\\DI\\\\Container\\).|Method Rade\\\\DI\\\\Container\\:\\:keys\\(\\) should return array<string> but returns array<int, int\\|string>.$#"
             path: src/Container.php
         -
-            message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)$#"
+            message: "#^Parameter \\#1 \\$offset (string) of method Rade\\\\DI\\\\Container\\:\\:offset|Set|Get|Exists|Unset\\(\\) should be contravariant with parameter \\$offset (mixed) of method ArrayAccess<mixed,mixed>\\:\\:offset|Set|Get|Exists|Unset\\(\\)|Call to function method_exists\\(\\) with Rade\\\\DI\\\\ServiceProviderInterface and 'getName' will always evaluate to true.$#"
             path: src/Container.php
         -
             message: '#^Invalid type Psr\\Container\\(NotFound|Container)ExceptionInterface to throw|Only booleans are allowed in a ternary operator condition, ReflectionType\|null given.$#'
