--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-json": "*",
         "divineniiquaye/php-invoker": "^0.9",
         "nette/utils": "^3.2",
-        "psr/container": "^1.0",
+        "psr/container": "^1.1|^2.0",
         "symfony/config": "^5.2",
         "symfony/service-contracts": "^1.1.6|^2"
     },
