--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "php": "^7.4 || ^8.0",
         "nette/utils": "^3.2",
         "psr/container": "^1.1|^2.0",
-        "symfony/config": "^5.2",
         "symfony/service-contracts": "^1.1.6|^2"
     },
     "require-dev": {
@@ -30,6 +29,7 @@
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpunit/phpunit": "^8.5 || ^9.5",
         "squizlabs/php_codesniffer": "^3.5",
+        "symfony/config": "^5.2",
         "vimeo/psalm": "^3.11 || 4.4.*"
     },
     "autoload": {
@@ -41,6 +41,10 @@
         "psr-4": {
             "Rade\\DI\\Tests\\": "tests/"
         }
+    },
+    "suggest": {
+        "symfony/config": "For using configurations in service providers and service builders",
+        "nikic/php-parser": "For using container builder class with service builders"
     },
     "scripts": {
         "phpcs": "phpcs -q",
