--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -21,5 +21,6 @@
     <!-- Include full PSR-12 Coding Standard -->
     <rule ref="PSR12">
         <exclude name="PSR1.Classes.ClassDeclaration.MultipleClasses"/>
+        <exclude name="PSR1.Methods.CamelCapsMethodName.NotCamelCaps"/> <!-- Affects FILE: src\ContainerBuilder.php -->
     </rule>
 </ruleset>
