--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -26,5 +26,5 @@ parameters:
             message: "#^Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:getBuilder\\(\\)|Short ternary operator is not allowed. Use null coalesce operator if applicable or consider using long ternary.$#"
             path: src/Resolvers/Resolver.php
         -
-            message: "#^Variable property|method access|call on object|PhpParser\\\\BuilderFactory|Unreachable statement - code above always terminates.$#"
+            message: "#^Variable property|method access|call on object|PhpParser\\\\BuilderFactory|Unreachable statement - code above always terminates|Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:extend|resolveClass\\(\\).$#"
             path: src/Traits/ResolveTrait.php
