--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^7.4 || ^8.0",
         "nette/utils": "^3.2",
         "psr/container": "^1.1|^2.0",
-        "symfony/service-contracts": "^1.1.6|^2"
+        "symfony/service-contracts": "^2.4"
     },
     "require-dev": {
         "composer/package-versions-deprecated": "^1.11",
